--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "devDependencies": {
     "chai": "~3.5.0",
     "mocha": "~3.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/darren-lester/iskanji.git"
   }
 }
