--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "~3.5.0",
+    "joyo-kanji": "^0.2.1",
     "mocha": "~3.0.2"
   },
   "repository": {
