--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nihongo",
     "language"
   ],
-  "author": "Darren Lester <dsslester@gmail.com>",
+  "author": "Darren Lester <dsslester@gmail.com> (http://www.darrenlester.com)",
   "license": "MIT",
   "devDependencies": {
     "chai": "~3.5.0",
